# flatter

./: Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml  cr.yml
src/: flatter.js
tests/: index.html
tests/flatpak/: ca.andyholmes.Flatter.Failure.yml  ca.andyholmes.Flatter.Success.json  ca.andyholmes.Flatter.json  main.c  meson.build
